# DataCenter-RustBridge

./: .dockerignore  .gitignore  Cargo.toml  DESIGN_WORLD_SYNC.md  README.md  rustc-ice-2026-04-09T18_32_29-48492.txt
.github/workflows/: build.yml
crates/dc_api/: Cargo.toml
crates/dc_api/src/: events.rs  lib.rs
crates/dc_api_macros/: Cargo.toml
crates/dc_api_macros/src/: lib.rs
crates/dc_example_mod/src/: lib.rs
crates/dc_multiplayer/: Cargo.toml
crates/dc_multiplayer/src/: ffi.rs  handlers.rs  lib.rs  net.rs  objects.rs  player.rs  protocol.rs  save.rs  state.rs  tick.rs  world.rs
crates/dc_multiplayer/src/ffi/: mod.rs  save.rs  session.rs
crates/dc_multiplayer/src/handlers/: mod.rs  save.rs  session.rs  world.rs
crates/dc_multiplayer/src/tick/: carry.rs  entities.rs  mod.rs
crates/dc_multiplayer/src/world/: actions.rs  mod.rs  rollback.rs  sync.rs
crates/dc_netwatch/: Cargo.toml
crates/dc_netwatch/src/: lib.rs
crates/dc_relay_proto/: Cargo.toml
crates/dc_relay_proto/src/: lib.rs
csharp/DataCenterModLoader/: Core.cs  CustomEmployeeManager.cs  DataCenterModLoader.csproj  EntityManager.cs  EventSystem.cs  FFIBridge.cs  GameAPI.cs  GameHooks.cs  HarmonyPatches.cs  ModConfigSystem.cs  MultiplayerBridge.cs  NetWatchSystem.cs  TechnicianHiring.cs
docs/: multiplayer_roadmap.md
inspect_tool/: Program.cs  full_output.txt  output.txt  uma_dump.txt
tools/: dump_members.csx  inspect_dump.ps1  inspect_input.ps1  inspect_rack.ps1  inspect_types.ps1  install.ps1  list_types.ps1  type_dump_output.txt
tools/TypeDumper/: Program.cs  TypeDumper.csproj  type_dump_output.txt
(+13 files in other folders)
